[package]
name = "cp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql"]}
axum = "0.6.18"
tokio = { version = "1.0", features = ["full"] }
# actix-web = "4"
