[package]
name = "cp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql"]}
axum = { version = "0.6.18", features = [ "tokio" ]}
tokio = { version = "1.0", features = ["full"] }
async-graphql = "5.0"
async-graphql-axum = "5.0"
