[package]
name = "cpp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "macros", "uuid"] }
axum = { version = "0.6.18", features = [ "tokio" ]}
tokio = { version = "1.0", features = ["full"] }
async-graphql = "5.0"
async-graphql-axum = "5.0"
tower-http = { version = "0.4.0", features = [ "cors" ]}
tower = "0.4.13"
http = "0.2.9"
uuid = { version = "1.3.2", features = [ "v4" ]}
